# morse_translator

./: .gitignore  CMakeLists.txt  README.md  key.txt
include/: CMakeLists.txt  morse_array.h  morse_array_internal.h  morse_converter.h  morse_converter_internal.h  morse_tree.h  morse_tree_internal.h  string_manip.h
src/: CMakeLists.txt  main.c  morse_array.c  morse_converter.c  morse_converter.h  morse_tree.c  string_manip.c
test/: CMakeLists.txt  test_ismorse.c  test_morse_array.c  test_morse_tree.c  test_trim.c
