#
#
#
#

CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(MORSE)

SET(MORSE_EXE "morse")
SET(MORSE_INCLUDE_DIR "${PROJECT_SOURCE_DIR}/include")
SET(MORSE_SRC "${PROJECT_SOURCE_DIR}/src")

# Uncomment to make makefiles verbose
# set(CMAKE_VERBOSE_MAKEFILE ON)

# gcc flags
SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -std=c11 -Wall -Wextra -D_GNU_SOURCE")
SET(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} -g -DDEBUG")
SET(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE} -DNDEBUG -O3")

# Source Code
ADD_SUBDIRECTORY(${MORSE_SRC})
INCLUDE_DIRECTORIES(${MORSE_INCLUDE_DIR})

add_executable(${MORSE_EXE} ${SOURCE_FILES})
