file(GLOB TEST_SOURCE_FILES "*.c")
list(REMOVE_ITEM MORSE_SOURCE_FILES "${MORSE_SRC}/main.c" "${MORSE_SRC}/main.cpp")

foreach(CURRENT_TEST_SOURCE_FILE ${TEST_SOURCE_FILES})
	get_filename_component(CURRENT_TEST_BINARY ${CURRENT_TEST_SOURCE_FILE} NAME_WE)
	string(REPLACE "test_" "" CURRENT_TEST ${CURRENT_TEST_BINARY})
	
	add_executable(${CURRENT_TEST_BINARY} ${CURRENT_TEST_SOURCE_FILE} ${MORSE_SOURCE_FILES})
	target_include_directories(${CURRENT_TEST_BINARY} PUBLIC ${MORSE_INCLUDE_DIR})

	add_test(${CURRENT_TEST} ${CURRENT_TEST_BINARY})
endforeach()
